syntax = "proto3";
package msgapi;

option go_package = "/api";

service AdminMessageService {
    rpc monitorAdminMessages(StudentAdminMessageRequest) returns (stream ChatMessage) {};
}

service StudentAdminMessageService {
  rpc getStudentAdminMessages(StudentAdminMessageRequest) returns (stream ChatMessage) {};
}

message UserKey {
  int64 Key = 1;
}

message ChatMessage {
  int64 senderId = 1;
  string text = 2;
  int64 timestamp = 3;
  int64 serverTimestamp = 6;
}

message StudentAdminMessageRequest{
  UserKey userKey = 1;
  string adminName = 2;
}
